Fix watches table overflowing

--- a/resources/assets/less/bem/beatmapset-watches.less
+++ b/resources/assets/less/bem/beatmapset-watches.less
@@ -20,6 +20,10 @@
   color: white;
   margin: 20px;
 
+  &__table-container {
+    overflow-x: scroll;
+  }
+
   &__col {
     &--cover {
       width: 70px;
